# technical-summary

./: .gitignore  .gitmodules  readme.md
01.algorithm/algo/algo/: CMakeLists.txt  algo.cxx  algo.h  avl.cxx  sort.cxx  test.cxx  test.h
02.language/c++/: cmake.md  问题集.md
02.language/c++/boost/: new 1.txt
02.language/c++/cmake/demo/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  main.cpp  (+6 more)
02.language/c++/test/Neptune/Neptune/: CMakeLists.txt  Neptune.cpp  Neptune.h  dynamic_program.cpp  dynamic_program.h  non_mutate.h  sequential_contain.cpp  sequential_contain.h  test_array.cpp  test_array.h  test_non_mutate.cpp  test_non_mutate.h  test_shared_ptr.h
02.language/c++/train/: readme.md
02.language/cmake/archive/: Step_2.md  Step_2_Adding_a_Library.md  Step_4 Installing and Testing.md
02.language/cmake/demo/: CMakeLists.txt
02.language/cmake/tutorial/step3/: CMakeLists.txt
02.language/cmake/tutorial/step3/MathFunctions/: CMakeLists.txt
02.language/cmake/tutorial/step4/: CMakeLists.txt
02.language/cmake/tutorial/step4/MathFunctions/: mysqrt.cxx
02.language/git/: Git.mmap
02.language/html/menu/: index.html
07.others/assist_files/html/: parameters.html
07.others/assist_files/js/: injection.js  学习笔记.txt
07.others/五险一金和税收/: 社保.txt  税收计算方法.txt
08.archive/: Git.mmap
08.interview/: ~$排序.docx  排序.docx
09.linux/深入理解linux内核第三版/: 02内存寻址.md
10.perfermance_tools/: gprof.md
11.train/data_structure/graph/: readme.txt
11.train/offer/: readme.txt
algorithm/: algorithm.md
algorithm/basic/: data_structure.md  kmp.cc  merge.cc
algorithm/basic/data_structure/: hashtable.cc  readme.txt
algorithm/basic/search/: search.cc
algorithm/beauty-of-programming/1.1/: main  main.c
algorithm/offer/: readme.txt
algorithm/offer/3_quality/: main  main.cc
algorithm/offer/4_thought/: .main.cc.swp  main  main.cc
algorithm/offer/5_optimize_ts/: main  main.cc
algorithm/offer/backtrack/: 12_matrix_path.cc  13_robot_zone.cc
algorithm/offer/bit_opr/: 15  15_find_1.cc  57_appear_once.cc  65_add_with_bit.cc  add  once
algorithm/offer/loop_recursive/: 14_cut_rope  14_cut_rope.cc  47_gift  47_gift.cc  48  48_longest_sub_without_dup.cc  60_dice  60_dice_sum_prob.cc  60_dice_sum_prob.h  60_saizi.cc  dice  tags
algorithm/offer/search_order/: .readme_search_order.txt.swp  main  main.cc  readme_search_order.txt
algorithm/offer/src/: chp6.cc
algorithm/test/: CMakeLists.txt
algorithm/test/algo/: CMakeLists.txt  algo.cxx  algo.h  sort.cxx  sort.h  sort.md
algorithm/test/stdlib_test/: main.cc
design_pattern/: design_pattern.md  events.h  main_observer.cc  main_singleton.cc  main_visitor.cc  singleton.h  visitor.h
interview/best_practice_for_interview/: friend.cc  numbers.cc  oo.cc  readme.md  virtual.cc
language/c++/: readme.md  stypeguild.md
language/c++/appc++/: .cusm_for.cc.swp  initialize.cc  main.cc  typetrait.cc
language/c++/appc++/train/: CMakeLists.txt  singleton.h  testa.cc  testa.h
language/c++/appc++/train/3/: CMakeLists.txt  person.h
language/c++/c++primer/: readme_9.txt  sales_data.cc  sales_data.h
language/c++/c++primer/III_class_design_tool/13_copy_control/: CMakeLists.txt  String.cc  String.h  foo.cc  foo.h  has_ptr.cc  has_ptr.h  main.cc  main_dy.cc  message.cc  message.h  readme.md  review.txt  str_vec.cc  str_vec.h
language/c++/c++primer/III_class_design_tool/15_oo_design/: CMakeLists.txt  readme_15.md
language/c++/c++primer/III_class_design_tool/15_oo_design/src/: basket.cc  basket.h  main.cc  quote.cc  quote.h
language/c++/c++primer/I_c++_base/7_class/: CMakeLists.txt
language/c++/c++primer/I_c++_base/7_class/mylib/: CMakeLists.txt  mylib.cc  mylib.h
language/c++/c++primer/I_c++_base/7_class/src/: main.cc
language/c++/cppstdlib-code-test/: C++11_async_operate.md  package_task.cc  readme.md
language/c++/stl/: excerpt.txt  stl.cc  str.txt  test
language/c++/train/test/Neptune/Neptune/: CMakeLists.txt  dynamic_program.cpp  dynamic_program.h  sequential_contain.h  test_array.cpp  test_array.h
language/c++/train/test/Neptune/Neptune/leetcode/: test_algo_base.cpp  test_algo_base.h
language/c++/train/test/test/cmake_test/1/: .CMakeLists.txt.swp  CMakeLists.txt
language/c++/train/test/test/cmake_test/1/libhello/: CMakeLists.txt  hello.c  hello.h
language/c++/train/test/test/cmake_test/1/src/: CMakeLists.txt  main.c
language/html/: first_project.txt
language/js/: inject_platform.js
machine_learning/deeplearning/: deeplearning_architecture.md
machine_learning/deeplearning/mnist/: comm.py  test_mnist.py
machine_learning/deeplearning/mxnet/: lecture1.md
machine_learning/deeplearning/pytorch/: comm.py  logistic.py  mars_comm.py  non_lr.py  result.txt  test_nn.py  test_softmax.py
others/: stratery_algorithm.md
others/shebao/: she_bao.txt
solar_system/: CMakeLists.txt
solar_system/asteroid/: CMakeLists.txt
solar_system/asteroid/include/asteroid/: simple_print.h  text_query.h
solar_system/asteroid/src/: simple_print.cc  text_query.cc
solar_system/earth/: CMakeLists.txt
solar_system/earth/include/earth/: test_text_query.h
solar_system/earth/src/: main.cc  test_text_query.cc
solar_system/mercury/: CMakeLists.txt
solar_system/mercury/include/mercury/: merge_sort.h  task_list.h
solar_system/mercury/src/: merge_sort.cc  tast_list.cc
tools/cmake/: CMakeLists.txt  cmake_tutorial_1.md  cmake_tutorial_2.md  readme.md
tools/cmake/archive/: Step_1_A_Basic_Starting_Point.md  Step_2_Adding_a_Library.md  Step_3 Adding Usage Requirements for a Library.md
tools/cmake/test/hello/: CMakeLists.txt  cmake_demo.txt
tools/cmake/test/hello/libhello/: CMakeLists.txt  hello.c  hello.h  mylib.cpp
tools/cmake/test/hello/src/: main.c
tools/cmake/tutorial/step2/: CMakeLists.txt  tutorial.cxx
tools/cmake/tutorial/step4/: tutorial.cxx
tools/cmake/tutorial/step4/MathFunctions/: CMakeLists.txt
tools/shell/: command.md
tools/vim/: QA.md  config_vim.md  vim_tutorials.md  vim_tutorials_2.md  vimrc_bk
tools/vim/test/: 1.txt  2.txt  3.txt  3.txt_bk  4.txt  5.txt  hello.cc  hello.h  test.cc
(+344 files in other folders)
